[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/marine.png" type="Texture" id=1]
[ext_resource path="res://sprites/RollTheDice.png" type="Texture" id=2]
[ext_resource path="res://sprites/orange.png" type="Texture" id=3]
[ext_resource path="res://sprites/purple.png" type="Texture" id=4]
[ext_resource path="res://sprites/green.png" type="Texture" id=5]
[ext_resource path="res://sprites/red.png" type="Texture" id=6]
[ext_resource path="res://sprites/unknown.png" type="Texture" id=7]
[ext_resource path="res://sprites/background.jpg" type="Texture" id=8]
[ext_resource path="res://sprites/de-20-faces_tmp.png" type="Texture" id=9]
[ext_resource path="res://Fight 1.gd" type="Script" id=10]
[ext_resource path="res://sprites/DICE.WAV" type="AudioStream" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 10 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 359.713, 238.864 )
texture = ExtResource( 8 )

[node name="RollDice" type="Button" parent="."]
margin_left = 858.297
margin_top = 213.584
margin_right = 1011.3
margin_bottom = 344.584
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="green" type="Sprite" parent="."]
position = Vector2( 180.664, 487.838 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 5 )

[node name="marine" type="Sprite" parent="."]
position = Vector2( 355.475, 474.065 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 1 )

[node name="orange" type="Sprite" parent="."]
position = Vector2( 502.74, 478.303 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )

[node name="purple" type="Sprite" parent="."]
position = Vector2( 851.833, 485.19 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 4 )

[node name="red" type="Sprite" parent="."]
position = Vector2( 676.422, 478.303 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 6 )

[node name="Monster" type="Sprite" parent="."]
position = Vector2( 497.66, 152.823 )
scale = Vector2( 0.343923, 0.343923 )
texture = ExtResource( 7 )

[node name="Dice1" type="Control" parent="."]
visible = false
margin_left = 38.9898
margin_top = 32.4915
margin_right = 188.99
margin_bottom = 182.492
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Dice1"]
position = Vector2( 75, 75 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Dice1"]
margin_left = 50.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
text = "lorem"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceSound" type="AudioStreamPlayer2D" parent="Dice1"]
position = Vector2( 127.356, 140.841 )
stream = ExtResource( 11 )

[node name="Dice2" type="Control" parent="."]
visible = false
margin_left = 200.807
margin_top = 32.4915
margin_right = 350.807
margin_bottom = 182.492
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Dice2"]
position = Vector2( 75, 75 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Dice2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
align = 1
valign = 1

[node name="DiceSound" type="AudioStreamPlayer2D" parent="Dice2"]
position = Vector2( -34.4611, 140.841 )
stream = ExtResource( 11 )

[node name="EnemyDice" type="Control" parent="."]
visible = false
margin_left = 785.147
margin_top = 42.9797
margin_right = 935.147
margin_bottom = 192.98
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="EnemyDice"]
modulate = Color( 0.32549, 0.380392, 0.988235, 1 )
position = Vector2( 75, 75 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="EnemyDice"]
margin_left = 50.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceSound" type="AudioStreamPlayer2D" parent="EnemyDice"]
position = Vector2( -912.469, 143.837 )
stream = ExtResource( 11 )
